# jeuEchecs

./: .gitignore  CMakeLists.txt  Chess  Makefile  ReadMe.md  config.sh
include/: Bishop.hpp  CMakeLists.txt  ChessBoard.hpp  Game.hpp  King.hpp  Knight.hpp  Pawn.hpp  Piece.hpp  Player.hpp  Queen.hpp  Tower.hpp  libs.hpp  main.hpp
src/: Bishop.cpp  CMakeLists.txt  ChessBoard.cpp  Game.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Player.cpp  Queen.cpp  Tower.cpp  main.cpp
test/: CMakeLists.txt
