cmake_minimum_required(VERSION 3.0.0)
project(Chess VERSION 1.0.0 LANGUAGES CXX)

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

set(EXE Chess)
set(SRC ${CMAKE_SOURCE_DIR}/src)

add_subdirectory(${SRC})